# ncn-portal-admin

./: .env.example  .gitignore  Cargo.toml  README.md  go.mod  go.sum  main.go  package.json
cmd/: main.go
cmd/pos/: main.go
cmd/pos/cli/: cli_createwallet.go
cmd/pow/: cli_createblockchain.go  cli_printchain.go  client.go  common.go  main.go  server.go
cmd/pow/cli/: cli_createblockchain.go  cli_createwallet.go  cli_getbalance.go  cli_listaddress.go  cli_printchain.go  cli_send.go
pos/: address.go  block.go  blockchain.go  secp256k1.go  secp256k1_test.go  state.go  tx.go  vote.go  wallet.go
pow/: README.md  base58.go  base58_test.go  block.go  blockchain.go  blockchain_iterator.go  cli.go  convert.go  merkle_tree.go  proofofwork.go  transaction.go  tx.go  tx_input.go  tx_output.go  txpool.go  utxo_set.go  wallet.go  wallets.go
src/: block.rs  blockchain.rs  hashable.rs  lib.rs  main.rs  transaction.rs
src/app/: globals.scss  layout.tsx  page.tsx
src/app/api/: apiConfig.ts
src/app/profile/: page.tsx
src/app/whitelist/: page.tsx
src/components/: ConnectWalletMenu.tsx  ConnectWalletMenuItem.tsx  ErrorDialog.tsx  SignIn.tsx  UnconnectableWalletMenuItem.tsx  WalletAccountIcon.tsx  WalletMenuItemContent.tsx
src/components/Button/: UploadMerkleRootButton.tsx
src/components/Dashboard/: NcnPortal.tsx
src/components/Header/: DropdownUser.tsx  index.tsx
src/components/Layouts/: DefaultLayout.tsx
src/components/Modal/: index.tsx
src/components/Provider/: ChainContext.tsx  (+1 more)
src/providers/: ThemesProvider.tsx
src/util/: errors.tsx
(+20 files in other folders)
