[package]
name = "sample_blockchain"
version = "0.1.0"
authors = ["Aoi <ht.so.ik0102@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "blockchainlib"
path = "src/lib.rs"

[[bin]]
name = "blockchain"
path = "src/main.rs"

[dependencies]
crypto-hash = "0.3.4"
hex = "0.4.3"

